testing/Travis/testcases/prototype/shouldFail/ParserOrTypecheckFailures/DoubleLabel.adl
CONTEXT Test IN ENGLISH

INTERFACE Overview : I[ONE]
  BOX [ l : V[ONE]
      , l : V[ONE]
      ]

ENDCONTEXT

{- 
   Purpose: to examine the error message caused by duplicate labels in a BOX statement.
   Result: FAIL
   Reason: Label names in BOX statements must be unique.
   
   Expected Message:
   The label `l` occurs 2 times
   in the BOX defined at: ...
-}
